Get first few endpoints working
